Agregados csrf.token a los templates que faltaban para que valide bien. Agregados boton de busqueda para poder volver al home

--- a/src/app/templates/agregar.html
+++ b/src/app/templates/agregar.html
@@ -1,6 +1,7 @@
 {% from "_formhelpers.html" import render_field %}
 
 <form method=post action="/agregar">
+    {{ form.csrf_token }}
   <dl>
     {{ render_field(form.nombre_dado) }}
     {{ render_field(form.direccion_dada) }}
