--- a/src/app/templates/agregar_resultado.html
+++ b/src/app/templates/agregar_resultado.html
@@ -12,4 +12,7 @@
       {% endif %}
     {% block content %}{% endblock %}
    </body>
+    <form method=get action="/home">
+      <input type=submit value=Volver>
+    </form>
 </html>
