--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -14,5 +14,8 @@
           <input type=submit value=Agregar>
         </form>
       {% endif %}
+      <form method=get action="/buscar">
+        <input type=submit value=Buscar>
+      </form>
   </body>
 </html>
